tests/miniJava/neg/000099_mutation.MiniJava
class java { public extends void Main ( String [ ] java ) { { } } }
